fixed links in dark mode

--- a/depictions/css/main.css
+++ b/depictions/css/main.css
@@ -206,4 +206,9 @@ td {
 	.box {
 		background-color: dimgrey;
 	}
+
+	#links tr a {
+		color: white;
+		font-weight: bold;
+	}
 }
